# workout_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py
backend/api/: router.py  search.py  users.py  workouts.py
backend/core/: cache.py  config.py  create_embeddings.py  database.py  load_embeddings.py  models.py  openai_client.py  prompt_builder.py  response_parser.py  summary_genertor.py
backend/models/: workouts.py
backend/services/: generate_workout.py  search.py  workout_category.py  workout_generator.py
ingest/sugarwod/: extract.py  load_to_sql.py
tests/: test_workouts.py
